--- a/full-index.ipynb
+++ b/full-index.ipynb
@@ -1,6 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f6d56451",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using python in /home/ubuntu/miniforge3/envs/scikit-learn-fun\n",
+      "3.10.16 | packaged by conda-forge | (main, Dec  5 2024, 14:08:42) [GCC 13.3.0]\n",
+      "\n",
+      "\u001b[42m[ OK ]\u001b[0m numpy version 1.26.1\n",
+      "\u001b[42m[ OK ]\u001b[0m scipy version 1.11.3\n",
+      "\u001b[42m[ OK ]\u001b[0m matplotlib version 3.10.0\n",
+      "\u001b[42m[ OK ]\u001b[0m sklearn version 1.6.0\n",
+      "\u001b[42m[ OK ]\u001b[0m pandas version 2.2.2\n",
+      "\u001b[42m[ OK ]\u001b[0m seaborn version 0.13.2\n",
+      "\u001b[41m[FAIL]\u001b[0m notebook not installed. \n",
+      "\u001b[42m[ OK ]\u001b[0m plotly version 5.22.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run check_env.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65607e32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -U -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4c70d18",
+   "metadata": {},
+   "source": [
+    "23.05.2024\n",
+    "\n",
+    "Successfully installed ipykernel-6.29.0 matplotlib-3.9.0 pandas-2.2.2 plotly-5.22.0 pyarrow-16.1.0 scikit-learn-1.5.0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,7 +306,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "scikit-learn-fun",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
